--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,17 +29,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "'SpeechCommands'        - full dataset          (51088 train, 6798 valid, 6835 test)\n",
+    "'SpeechCommandsBinary'  - only 'yes' and 'go'   ( 3721 train,  521 valid,  507 test)\n",
+    "\"\"\"\n",
+    "DATASET_FOLDER='SpeechCommandsBinary'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def download_data():\n",
+    "def download_data(dataset_folder, download=False):\n",
     "    if not os.path.isdir(\"./data\"):\n",
     "        os.makedirs(\"./data\")\n",
     "\n",
-    "    train_dataset = torchaudio.datasets.SPEECHCOMMANDS(root='./data', url='speech_commands_v0.01', download=True, subset='training')\n",
-    "    valid_dataset = torchaudio.datasets.SPEECHCOMMANDS(root='./data', url='speech_commands_v0.01', download=True, subset='validation')\n",
-    "    test_dataset = torchaudio.datasets.SPEECHCOMMANDS(root='./data', url='speech_commands_v0.01', download=True, subset='testing')\n",
+    "    train_dataset = torchaudio.datasets.SPEECHCOMMANDS(root='./data', folder_in_archive=dataset_folder, url='speech_commands_v0.01', download=download, subset='training')\n",
+    "    valid_dataset = torchaudio.datasets.SPEECHCOMMANDS(root='./data', folder_in_archive=dataset_folder, url='speech_commands_v0.01', download=download, subset='validation')\n",
+    "    test_dataset = torchaudio.datasets.SPEECHCOMMANDS(root='./data', folder_in_archive=dataset_folder, url='speech_commands_v0.01', download=download, subset='testing')\n",
     "    return train_dataset, valid_dataset, test_dataset"
    ]
   },
@@ -57,7 +70,7 @@
     }
    ],
    "source": [
-    "train_dataset, valid_dataset, test_dataset = download_data()\n",
+    "train_dataset, valid_dataset, test_dataset = download_data(DATASET_FOLDER)\n",
     "print(len(train_dataset), len(valid_dataset), len(test_dataset), )"
    ]
   },
@@ -713,7 +726,7 @@
     "\n",
     "    experiment.log_parameters(hparams)\n",
     "\n",
-    "    train_dataset, valid_dataset, test_dataset = download_data()\n",
+    "    train_dataset, valid_dataset, test_dataset = download_data(DATASET_FOLDER)\n",
     "\n",
     "    device, use_cuda = get_device()\n",
     "\n",
@@ -802,7 +815,7 @@
    "source": [
     "comet_api_key = \"KddYvSKPDO9U8K1lZUIUCgHjT\"\n",
     "project_name = \"speech-recognition\"\n",
-    "experiment_name = \"asr-scheduler:none-0\"\n",
+    "experiment_name = \"asr-scheduler:none-data:binary\"\n",
     "\n",
     "# comet_api_key = \"\"\n",
     "# project_name = \"speechrecognition\"\n",
@@ -947,7 +960,7 @@
     "    \"dropout\": 0.1,\n",
     "    \"learning_rate\": 8e-6,\n",
     "    \"batch_size\": 128,\n",
-    "    \"epochs\": 3,\n",
+    "    \"epochs\": 2,\n",
     "}\n",
     "\n",
     "model = train_test(hparams, experiment)"
