--- a/model.ipynb
+++ b/model.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
     "        string = []\n",
     "        for i in labels:\n",
     "            string.append(self.index_map[i])\n",
-    "        return ''.join(string).replace('<BLANK>', ' ')\n",
+    "        return ''.join(string).replace('<BLANK>', ' ').strip()\n",
     "\n",
     "\n",
     "# TODO: SpecAugment (masking augmentations)\n",
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,15 +705,18 @@
     "        targets.append(text_transform.int_to_text(labels[i][:label_lengths[i]].tolist()))\n",
     "        blank_ctr = 0\n",
     "        for j, index in enumerate(args):\n",
-    "            if index == blank_label:\n",
+    "            if collapse_repeated and index == blank_label:\n",
     "                blank_ctr += 1\n",
-    "                if blank_ctr > 3:\n",
-    "                    decode.append(index.item())\n",
-    "                    blank_ctr = 0\n",
     "            else:\n",
+    "                if blank_ctr > 2:\n",
+    "                    decode.append(blank_label)\n",
+    "                blank_ctr = 0\n",
+    "\n",
     "                if collapse_repeated and j != 0 and index == args[j - 1]:\n",
     "                    continue\n",
+    "                \n",
     "                decode.append(index.item())\n",
+    "        \n",
     "        decodes.append(text_transform.int_to_text(decode))\n",
     "    return decodes, targets"
    ]
@@ -1059,11 +1062,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def infer(sample_idx: int, model):\n",
+    "def infer(sample_idx: int, model, collapse_repeated: bool=True):\n",
     "    device, _ = get_device()\n",
     "    spectrogram, label, input_length, label_length = \\\n",
     "        data_processing((test_dataset.__getitem__(n=sample_idx),))\n",
@@ -1074,7 +1077,7 @@
     "    output = model(spectrogram)\n",
     "    output = F.log_softmax(output, dim=2)\n",
     "\n",
-    "    pred, label = GreedyDecoder(output, label, label_length, collapse_repeated=True)\n",
+    "    pred, label = GreedyDecoder(output, label, label_length, collapse_repeated=collapse_repeated)\n",
     "\n",
     "    print(f\"Probabilities matrix shape: {output.shape}\")\n",
     "    print(f\"Greedy decoding indices:\\n{torch.argmax(output, dim=2)}\")\n",
@@ -1085,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1117,164 +1120,12 @@
       "       device='cuda:0')\n",
       "\n",
       "Target: ['of this second letter also she spoke and told me that it contained an invitation for her to go and see the poet if ever she visited the lakes']\n",
-      "Prediction: [' of this sec ond let ter al so she spoke and tol me that it con tained an in vi tat ion for her to be to se the po et if ever she vis it ed the lakes ']\n"
+      "Prediction: ['of this second letter al so she spoke and tol me that it con tained an in vi tation for her to be to se the poet if ever she vis ited the lakes']\n"
      ]
     }
    ],
    "source": [
-    "infer(1000, model_loaded)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"well i'm convinced that the boarded up house mystery happened not earlier than april sixteenth eighteen sixty one and probably not much later\""
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sample_idx = 2000\n",
-    "\n",
-    "device, _ = get_device()\n",
-    "spectrogram, label, input_length, label_length = \\\n",
-    "    data_processing((test_dataset.__getitem__(n=sample_idx),))\n",
-    "spectrogram, label = spectrogram.to(device), label.to(device)\n",
-    "\n",
-    "word_label = text_transform.int_to_text(label.int().tolist()[0])\n",
-    "word_label"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_inference = model\n",
-    "model_inference.eval()\n",
-    "\n",
-    "output = model_inference(spectrogram)\n",
-    "output = F.log_softmax(output, dim=2)\n",
-    "\n",
-    "decoded_preds, decoded_targets = GreedyDecoder(output, label, label_length, collapse_repeated=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[-1.6369e+01, -6.6757e-06, -1.2831e+01,  ..., -2.1750e+01,\n",
-       "          -1.6152e+01, -2.2873e+01],\n",
-       "         [-1.6868e+01, -3.3379e-06, -1.4569e+01,  ..., -2.3150e+01,\n",
-       "          -1.7363e+01, -2.4462e+01],\n",
-       "         [-1.7008e+01, -2.5034e-06, -1.5199e+01,  ..., -2.3129e+01,\n",
-       "          -1.7829e+01, -2.4379e+01],\n",
-       "         ...,\n",
-       "         [-1.5104e+01, -1.3590e-05, -1.2845e+01,  ..., -1.8830e+01,\n",
-       "          -1.5519e+01, -2.0695e+01],\n",
-       "         [-1.5002e+01, -8.9407e-06, -1.3412e+01,  ..., -1.9055e+01,\n",
-       "          -1.6019e+01, -2.1099e+01],\n",
-       "         [-1.5467e+01, -1.0610e-05, -1.3583e+01,  ..., -1.9261e+01,\n",
-       "          -1.5532e+01, -2.1443e+01]]], device='cuda:0',\n",
-       "       grad_fn=<LogSoftmaxBackward0>)"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 396, 28])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1, 24,  6,\n",
-       "         13, 13,  1, 13,  1,  1,  1,  1,  1,  1,  1,  1,  1,  2,  1,  1,  1,  1,\n",
-       "          1,  1,  1,  4, 16, 16, 15,  1,  1,  1,  1,  1, 21,  7, 10, 20,  1,  4,\n",
-       "          6,  5,  1,  1,  1, 21,  1,  2, 21,  1,  1,  1, 21,  9,  6,  1,  1,  1,\n",
-       "          1,  1,  1,  3, 16,  2, 16,  5,  1,  1,  6,  5,  1,  1,  1,  1,  1, 22,\n",
-       "         17,  1,  1,  1,  1,  1,  1,  1,  1,  9, 16, 22,  1, 20,  6,  1,  1,  1,\n",
-       "          1,  1,  1,  1,  1, 14, 26, 20, 20,  1,  1,  1, 21, 21, 19, 19, 26,  1,\n",
-       "          1, 20,  1,  1,  1,  1,  1,  1,  1,  9,  2, 17,  1,  1, 17, 17,  6, 15,\n",
-       "          6,  5,  1,  1,  1,  1,  1,  1,  1, 15, 15, 16, 21,  1,  1,  1,  1,  1,\n",
-       "          1,  1,  2, 19, 19,  1,  1,  1, 13,  1, 13, 10,  1,  2, 19,  1,  1,  1,\n",
-       "          1,  1, 21,  9,  2, 15,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
-       "          1,  2,  2,  1,  1,  1, 17,  6, 19, 16, 13,  1,  1,  1,  1,  1,  1,  1,\n",
-       "         20, 10,  1,  6, 25,  1,  1,  1,  1,  1,  1,  1,  1, 21,  6,  1,  6,  6,\n",
-       "         21, 21,  9,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
-       "          1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1, 22,  1,  1, 21, 21,\n",
-       "          2,  1,  6, 15, 15,  1,  1,  1,  1,  1,  1, 20,  2, 10, 25, 25,  1,  1,\n",
-       "          1,  1,  1, 21,  6,  1,  6, 15,  1,  1,  1,  1,  1, 16, 16, 15, 15,  6,\n",
-       "          1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  2, 15,  5,  1,\n",
-       "          1,  1,  1,  1,  1,  1,  1,  1, 17, 19, 16,  3,  3,  2,  2,  1,  1,  1,\n",
-       "         13, 13, 26,  1,  1,  1,  1,  1,  1,  1,  1, 15, 16, 21,  1,  1,  1,  1,\n",
-       "          1,  1,  1,  1, 14, 22,  4,  9,  9,  1,  1,  1,  1,  1,  1,  1,  1, 13,\n",
-       "          6,  2,  2,  5,  1,  6,  6,  6,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1]],\n",
-       "       device='cuda:0')"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(output.shape)\n",
-    "torch.argmax(output, dim=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Target: [\"well i'm convinced that the boarded up house mystery happened not earlier than april sixteenth eighteen sixty one and probably not much later\"]\n",
-      "Prediction: ['wellacontfiscedtattheboaodeduphousemystryshappenednotarlliarthanaperolsiexteethutaensaixteenoneandprobalynotmuchleade']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"Target: {decoded_targets}\")\n",
-    "print(f\"Prediction: {decoded_preds}\")"
+    "infer(1000, model_loaded, collapse_repeated=True)"
    ]
   },
   {
